# CliMaPan-Lab

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: README.md
.github/workflows/: ci.yml  docs.yml  release.yml  security-and-deps.yml  test.yml
climapan_lab/: __init__.py  base_params.py  jax_calibrate.py  model.py  run_sim.py  validate_sim.py
climapan_lab/analysis/: __init__.py  inspect_results.py  sensitivity_analyzer.py  sensitivity_params.py  validation_params.py
climapan_lab/docs/: __init__.py  uml_diagram.py
climapan_lab/examples/: Load_data.py  __init__.py  basic_simulation.py  graph.py  scenario.py  simple_example.py
climapan_lab/src/: legacy.py  models.py  param_dict.py  params.py  utils.py
climapan_lab/src/banks/: Bank.py  Bank_revise.py  Bank_revise_2.py  Bank_revise_3.py  __init__.py
climapan_lab/src/climate/: Climate.py  Climate_Flood.py  Climate_old.py  __init__.py
climapan_lab/src/consumers/: Consumer.py
climapan_lab/src/firms/: BrownEnergyFirm.py  CapitalGoodsFirm.py  ConsumerGoodsFirm.py  EnergyFirmBase.py  GoodsFirmBase.py  GreenEnergyFirm.py  __init__.py
climapan_lab/src/governments/: Goverment.py  __init__.py
docs/: README.md  changelog.rst  climate.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  odd_protocol.rst  quickstart.rst  requirements.txt
docs/_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  contributing.doctree  index.doctree  installation.doctree  license.doctree  quickstart.doctree
docs/_build/html/.doctrees/api/: agents.doctree  index.doctree  model.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_build/html/_sources/api/: agents.rst.txt  (+1 more)
docs/_build/html/api/: agents.html  index.html  model.html
docs/api/: agents.rst  index.rst  model.rst
scripts/: update_docs.py
tests/: __init__.py  run_all_tests.py  test_basic_functionality.py  test_examples.py  test_integration.py  test_model_components.py  test_performance.py
(+9 files in other folders)
