[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climapan-lab"
version = "0.0.1"
authors = [
    {name = "CliMaPan-Lab Team", email = "duyanhpham@outlook.com"},
]
description = "Climate-Pandemic Economic Modeling Laboratory"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["economics", "climate", "pandemic", "agent-based-modeling", "simulation"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "agentpy>=0.1.5",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "joblib>=1.1.0",
    "salib>=1.4.0",
    "networkx>=2.6.0",
    "pathos>=0.2.8",
    "dill>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.urls]
"Homepage" = "https://github.com/your-username/climapan-lab"
"Bug Reports" = "https://github.com/your-username/climapan-lab/issues"
"Source" = "https://github.com/your-username/climapan-lab"

[project.scripts]
climapan-run = "climapan_lab.run_sim:main"

[tool.setuptools.packages.find]
include = ["climapan_lab*"]
exclude = ["tests*", "docs*", "results*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["climapan_lab"]
known_third_party = ["agentpy", "numpy", "pandas", "matplotlib", "sklearn", "scipy", "joblib", "salib", "networkx", "pathos", "dill"] 